# certificate-service

./: .gitignore  .txt  README.md  app.py  docker-compose.yml  note.txt  pyproject.toml  requirements.txt  test.py  test_notif.py  test_power.py  test_rabbit.py  worker.py
api/: deps.py
api/endpoints/: certificates copy  certificates.py
cert_backend/: main.py
cert_backend/repository/: database.py  models.py  schema.py
cert_maker/: CourseTemplate.pptx  certificate_generator_with_images.py  config.env
cert_ui/: .eslinttrc.cjs  .gitignore  eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
cert_ui/src/: App.tsx  index.css  main.tsx
cert_ui/src/api/: axios.ts  server.ts
cert_ui/src/components/: Clock.tsx  CreateUser.tsx  DataTable.tsx  PasswordInput.tsx  UserTable.tsx
cert_ui/src/components/ui/: calendar.tsx  input-otp.tsx  sidebar.tsx
cert_ui/src/constant/: toastMessages.ts
cert_ui/src/context/: authenticationContext.tsx
cert_ui/src/core/: routes.ts  types.ts
cert_ui/src/hooks/: useAxiosPrivate.tsx  useMediaQuery.tsx  useRefreshToken.tsx
cert_ui/src/layouts/: AppSidebar.tsx  AuthenticationLayout.tsx  UserPanelLayout.tsx
cert_ui/src/pages/: ChangePassword.tsx  CreateCourse.tsx  ForgetPassword.tsx  Login.tsx  ManageUsers.tsx  MangeDepartment.tsx  Singup.tsx  UserPanel.tsx  Verify.tsx
core/: config.py  security.py
models/: certificate.py
rabbitmq/: definitions.json
services/: certificate_generator  certification_generator copy  certification_generator.py
templates/: certificate_template2.pptx
