[project]
name = "cert-website"
version = "0.1.0"
description = ""
authors = [
    {name = "myadegari",email = "myadegari37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "jdatetime (>=5.2.0,<6.0.0)",
    "comtypes (>=1.4.11,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.7,<0.1.0)",
    "pyotp (>=2.9.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
autoflake = "^2.3.1"

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true