[project]
name = "cert-publish-microservise"
version = "0.1.0"
description = ""
authors = [
    {name = "myadegari",email = "myadegari37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-pptx (>=1.0.2,<2.0.0)",
    "comtypes (>=1.4.11,<2.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "jdatetime (>=5.2.0,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pptxtopdf (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "redis (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
